# ing2-tg-2023-2024-groupe7-equipe9

./: CMakeLists.txt  Menu  Méthode de pert début  README.md  exclusions.c  exclusions.h  exclusionstest.h  main.c  maintest.c  menu.c  operation.c  operation.h  precedence.c  precedence.h  precedencetest.c  precedencetest.h
